[package]
name = "img-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
vectorize = { path = "../vectorize" } # TODO: publish this local crate (crate can be found at https://github.com/Ovikx/vectorize)
rand = "0.8.5"
